# Chess_Query_AI

./: .gitignore  README.md  generate.py  model.json  pyproject.toml  system.txt  user.txt
Main/: generate.py  system.txt
chess_query_ai/: utils.py
